--- a/env_files/fidesctl.env
+++ b/env_files/fidesctl.env
@@ -1,2 +1,1 @@
-FIDES_SERVER_URL="http://fidesapi:8080"
-FIDES_SERVER_SQLALCHEMY_CONN_STR="mysql+mysqlconnector://fidesdb:fidesdb@fides-db:3306/fidesdb"
+FIDES_CONFIG_PATH=example_config.ini
