--- a/env_files/fidesctl.env
+++ b/env_files/fidesctl.env
@@ -1,1 +1,2 @@
-FIDES_CONFIG_PATH=example_config.ini
+FIDES_CONFIG_PATH="example_config.ini"
+FIDES_SERVER_SQLALCHEMY_CONN_STR="mysql+mysqlconnector://fidesdb:fidesdb@fides-db:3306/fidesdb"
