cleans up the code to conform to project standards

--- a/fidesctl/pyproject.toml
+++ b/fidesctl/pyproject.toml
@@ -50,6 +50,7 @@ disable=[
     "missing-module-docstring",
     "raise-missing-from",
     "fixme"]
+extension-pkg-whitelist = "pydantic"
 
 [tool.pylint.reports]
 reports="no"
