--- a/fidesctl/mypy.ini
+++ b/fidesctl/mypy.ini
@@ -1,15 +1,22 @@
 [mypy] 
-files = src/**/**.py
-warn_unused_configs = true
-ignore_missing_imports = true
-pretty = true
-plugins = pydantic.mypy
+check_untyped_defs = True
 disallow_any_explicit = true
 disallow_untyped_defs = true
+files = src/**/**.py
+follow_imports = silent
+ignore_missing_imports = true
+no_implicit_reexport = True
+pretty = true
+plugins = pydantic.mypy
+warn_redundant_casts = True
+warn_unused_configs = true
+warn_unused_ignores = True
 
-[mypy-src.fidesctl.core.models]
-# Got an error saying BaseModel was explicit type Any
-disallow_any_explicit = false 
+[pydantic-mypy]
+init_forbid_extra = True
+init_typed = True
+warn_required_dynamic_aliases = True
+warn_untyped_fields = True
 
 [mypy-src.fidesctl._version]
 ignore_errors = true
