--- a/fidesctl/Dockerfile
+++ b/fidesctl/Dockerfile
@@ -17,6 +17,7 @@ RUN pip install -r dev-requirements.txt
 # Copy in the application files and install it locally
 COPY . /fidesctl
 WORKDIR /fidesctl
+RUN mypy --install-types --non-interactive src/
 RUN pip install -e .
 
 CMD ["/bin/bash"]
