--- a/fidesctl/mypy.ini
+++ b/fidesctl/mypy.ini
@@ -1,15 +1,14 @@
 [mypy] 
 check_untyped_defs = True
-disallow_any_explicit = true
-disallow_untyped_defs = true
+disallow_any_explicit = True
+disallow_untyped_defs = True
 files = src/**/**.py
-follow_imports = silent
-ignore_missing_imports = true
+ignore_missing_imports = True
 no_implicit_reexport = True
-pretty = true
+pretty = True
 plugins = pydantic.mypy
 warn_redundant_casts = True
-warn_unused_configs = true
+warn_unused_configs = True
 warn_unused_ignores = True
 
 [pydantic-mypy]
@@ -19,4 +18,4 @@ warn_required_dynamic_aliases = True
 warn_untyped_fields = True
 
 [mypy-src.fidesctl._version]
-ignore_errors = true
+ignore_errors = True
