Overhaul the Fides Config (#71)
* Update config.py

* adds a config command and overhauls config loading

* updates all of the tests to use a test_config

* cleans up the code to conform to project standards

* adds a test for the new config version

* gets the first cli test running and updates mypy settings

* adds a failing system to the sample manifests

--- a/env_files/fidesctl.env
+++ b/env_files/fidesctl.env
@@ -1,2 +1,2 @@
-FIDES_SERVER_URL="http://fidesapi:8080"
+FIDES_CONFIG_PATH="example_config.ini"
 FIDES_SERVER_SQLALCHEMY_CONN_STR="mysql+mysqlconnector://fidesdb:fidesdb@fides-db:3306/fidesdb"
