--- a/fidesctl/mypy.ini
+++ b/fidesctl/mypy.ini
@@ -1,15 +1,21 @@
 [mypy] 
+check_untyped_defs = True
+disallow_any_explicit = True
+disallow_untyped_defs = True
 files = src/**/**.py
-warn_unused_configs = true
-ignore_missing_imports = true
-pretty = true
+ignore_missing_imports = True
+no_implicit_reexport = True
+pretty = True
 plugins = pydantic.mypy
-disallow_any_explicit = true
-disallow_untyped_defs = true
+warn_redundant_casts = True
+warn_unused_configs = True
+warn_unused_ignores = True
 
-[mypy-src.fidesctl.core.models]
-# Got an error saying BaseModel was explicit type Any
-disallow_any_explicit = false 
+[pydantic-mypy]
+init_forbid_extra = True
+init_typed = True
+warn_required_dynamic_aliases = True
+warn_untyped_fields = True
 
 [mypy-src.fidesctl._version]
-ignore_errors = true
+ignore_errors = True
