--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,5 +34,8 @@ jobs:
       - name: TypeCheck Fidesctl
         run: make mypy
 
+      - name: Complexity Check
+        run: make xenon
+
       - name: Test Fidesctl
         run: make pytest
