fixes the dry-evaluate test failures. test coverage hits 90%

--- a/fidesctl/data/sample/registry.yml
+++ b/fidesctl/data/sample/registry.yml
@@ -1,6 +1,6 @@
 registry:
-  organizationId: 1
-  fidesKey: demo_registry,
-  name: "Demo Registry"
-  description: "Demo Regsitry"
-  systems: []
+  - organizationId: 1
+    fidesKey: "demoRegistry"
+    name: "Demo Registry"
+    description: "Demo Regsitry"
+    systems: []
