adds a healthcheck to the docker-compose, adds a devcontainer file and default settings file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,7 @@
-# VS Code settings
+{
+    "editor.formatOnSave": true,
+    "editor.tabSize": 4,
+    "editor.insertSpaces": true,
+    "python.formatting.provider": "black",
+    "python.linting.mypyEnabled": true,
+}
