--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   fidesctl:
     build:
@@ -7,7 +5,8 @@ services:
       dockerfile: Dockerfile
     command: /bin/bash
     depends_on:
-      - fidesapi
+      fidesapi:
+        condition: service_healthy
     volumes:
       - type: bind
         source: ./fidesctl
@@ -24,6 +23,12 @@ services:
     command: sbt ~jetty:start
     depends_on:
       - fides-db
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080"]
+      interval: 20s
+      timeout: 10s
+      retries: 3
+      start_period: 20s
     expose:
       - 8080
     ports:
