--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,22 @@
 {
-    "name": "Fidesctl",
-    "dockerComposeFile": "../docker-compose.yml",
-    "service": "fidesctl",
-    "workspaceFolder": "/fidesctl",
-    "shutdownAction": "stopCompose"
+	"name": "Fidesctl",
+	"dockerComposeFile": "../docker-compose.yml",
+	"service": "fidesctl",
+	"workspaceFolder": "/fidesctl",
+	"shutdownAction": "stopCompose",
+	"extensions": [
+		"ms-azuretools.vscode-docker",
+		"redhat.vscode-yaml",
+		"ms-python.python",
+		"ms-python.vscode-pylance",
+		"davidanson.vscode-markdownlint",
+		"bungcip.better-toml"
+	],
+	"settings": {
+		"editor.formatOnSave": true,
+		"editor.tabSize": 4,
+		"editor.insertSpaces": true,
+		"python.formatting.provider": "black",
+		"python.linting.mypyEnabled": true,
+	}
 }
