--- a/fidesctl/Dockerfile
+++ b/fidesctl/Dockerfile
@@ -15,8 +15,8 @@ RUN pip install -r requirements.txt
 RUN pip install -r dev-requirements.txt
 
 # Copy in the application files and install it locally
-COPY . /fidesctl
-WORKDIR /fidesctl
+COPY . /fides/fidesctl
+WORKDIR /fides/fidesctl
 RUN pip install -e .
 
 CMD ["/bin/bash"]
