--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,16 @@
-version: "3.8"
-
 services:
   fidesctl:
     build:
       context: fidesctl
       dockerfile: Dockerfile
-    command: /bin/bash
+    command: /bin/bash -c "sleep infinity"
     depends_on:
-      - fidesapi
+      fidesapi:
+        condition: service_healthy
     volumes:
       - type: bind
-        source: ./fidesctl
-        target: /fidesctl
+        source: .
+        target: /fides
         read_only: False
     env_file:
       - env_files/fidesctl.env
@@ -23,7 +22,14 @@ services:
       target: local
     command: sbt ~jetty:start
     depends_on:
-      - fides-db
+      fides-db:
+        condition: service_started
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080"]
+      interval: 20s
+      timeout: 10s
+      retries: 3
+      start_period: 20s
     expose:
       - 8080
     ports:
