--- a/.gitignore
+++ b/.gitignore
@@ -115,7 +115,7 @@ parts/
 sdist/
 var/
 wheels/
-.egg-info/
+*.egg-info/
 !.egg-info/entry_points.txt # Required so that this works when mounted via docker-compose
 .installed.cfg
 *.egg
