refactors how the docs are configured to run with make docs-serve

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,9 @@ services:
       - env_files/mysql_db.env
 
   docs:
-    image: squidfunk/mkdocs-material
+    build:
+      context: docs/fides/
+      dockerfile: Dockerfile
     volumes:
       - ./docs/fides:/docs
     expose:
