--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -3,8 +3,7 @@ site_url: https://example.com/
 nav:
   - Home: index.md
   - License: license.md
-  - Fides Objects:
-      - Object Types: fides_objects/object_types.md
+  - Fides Resources: fides_resources.md
   - Getting Started:
       - getting_started/docker.md
       - getting_started/local.md
