--- a/fidesctl/pyproject.toml
+++ b/fidesctl/pyproject.toml
@@ -36,6 +36,9 @@ exclude = '''
 ########
 # Pylint
 ########
+[tool.pylint.master]
+ignore="models"
+
 [tool.pylint.messages_control]
 disable=[
     "line-too-long",
