Create the Fides Lang submodule (#85)
* updates the tests, moves more functionality into the lang submodule [ci skip]

* adds FidesKey validation to the FidesModel, adds testing for the FidesModel [ci skip]

* breaks fidesctl.lang out into its own module, fideslang

* cleans up the egg stuff [ci skip]

* fixes a gitignore typo [ci skip]

* adds the name and description fields to the base FidesModel [ci skip]

* gets rid of some unused imports [ci skip]

* Create the Fides Lang submodule

* breaks out all of the models into their own files in a new module [ci skip]

* updates the config to be TOML and overhauls how the config is created at runtime, also starts to create the reusable validator pattern [ci skip]

* starts building out the robust, per-model validation [ci skip]

* adds the reusable self-reference validator and tests for the System object [ci skip]

* adds more validation to the models, adds testing for models with additional validation [ci skip]

* update the base FidesModel so that it will throw an error if extra fields are passed in the parse_obj method [ci skip]

* fix the tests, everything passing

* fixes all of the CI checks

* fix the apply cli test

--- a/fidesctl/pyproject.toml
+++ b/fidesctl/pyproject.toml
@@ -14,6 +14,7 @@ requires = ["setuptools", "wheel", "versioneer-518"]  # PEP 508 specifications.
 #######
 [tool.black]
 py39 = true
+line-length = 88
 include = '\.pyi?$'
 exclude = '''
 /(
@@ -36,6 +37,9 @@ exclude = '''
 ########
 # Pylint
 ########
+[tool.pylint.master]
+ignore="models"
+
 [tool.pylint.messages_control]
 disable=[
     "line-too-long",
