renames show to ls, checkpoints continued work on the evaluation logic [ci skip]

--- a/fidesctl/data/policy.yml
+++ b/fidesctl/data/policy.yml
@@ -3,6 +3,9 @@ policy:
     fidesKey: "primaryPrivacyPolicy"
     name: "Primary Privacy Policy"
     description: "The main privacy policy for the organization."
+    systems:
+      - dataAnanlyticsSystem
+      - customerDataSharingSystem
     rules:
       - organizationId: 1
         fidesKey: "rejectTargetedMarketing"
