--- a/fidesctl/data/system.yml
+++ b/fidesctl/data/system.yml
@@ -26,7 +26,7 @@ system:
         dataCategories:
           - "political_opinion"
         dataUse: "share"
-        dataQualifier: "identified_data"
+        dataQualifier: "anonymized_data"
         dataSubjects:
           - "customer"
         datasetReferences:
