--- a/fidesctl/data/system.yml
+++ b/fidesctl/data/system.yml
@@ -14,7 +14,7 @@ system:
           - "customer"
         datasetReferences:
           - "sample_db_dataset.Food_Preference"
-    systemDependencies: []
+    systemDependencies: [customerDataSharingSystem]
 
   - organizationId: 1
     fidesKey: "customerDataSharingSystem"
@@ -26,7 +26,7 @@ system:
         dataCategories:
           - "political_opinion"
         dataUse: "share"
-        dataQualifier: "identified_data"
+        dataQualifier: "anonymized_data"
         dataSubjects:
           - "customer"
         datasetReferences:
