updates all of the object references to be resource references in the fidesctl source code

--- a/fidesctl/tests/data/passing_taxonomy.yml
+++ b/fidesctl/tests/data/passing_taxonomy.yml
@@ -139,7 +139,7 @@ system:
 
 policy:
   - organizationId: 1
-    fidesKey: "primaryPrivacyPolicy"
+    fidesKey: "passingPrivacyPolicy"
     name: "Primary Privacy Policy"
     description: "The main privacy policy for the organization."
     rules:
